@@ -18,6 +18,8 @@ release 0.7 (2008-04-18)
       - javax.xml.transform.stream.StreamSource
       - javax.xml.transform.sax.SAXSource
       - javax.xml.transform.dom.DOMSource
+  - Support message body reader/writer MultivaluedMap<String, String>
+    with the media type "application/x-www-form-urlencoded".
 
 release 0.6.1 (2008-03-18)
 - Support for xml attributes serialization/deserialization in JSON added
